--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>fenta sinckers</title>
-    <link rel="stylesheet" href="estilo.css">
+    <!-- Ruta corregida para el archivo CSS -->
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 
@@ -23,17 +24,19 @@
     <h2>Galería de Modelos</h2>
 
     <div class="galeria">
-        <img src="par1.jpg">
-        <img src="par2.jpg">
-        <img src="par3.jpg">
-        <img src="par4.jpg">
-        <img src="par5.jpg">
-        <img src="par6.jpg">
+        <!-- Rutas actualizadas para las imágenes -->
+        <img src="img/par1.jpg" alt="Modelo 1">
+        <img src="img/par2.jpg" alt="Modelo 2">
+        <img src="img/par3.jpg" alt="Modelo 3">
+        <img src="img/par4.jpg" alt="Modelo 4">
+        <img src="img/par5.jpg" alt="Modelo 5">
+        <img src="img/par6.jpg" alt="Modelo 6">
     </div>
 
-    <video width="400">
-        <source src="v.mp4" type="video/mp4">
-      
+    <!-- Ruta corregida para el video -->
+    <video width="400" controls>
+        <source src="img/v.mp4" type="video/mp4">
+        Tu navegador no soporta videos HTML5.
     </video>
 </section>
 
@@ -64,3 +67,4 @@
 
 </body>
 </html>
+
